--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ body {
   max-width: 800px;
   margin: 0 auto;
   padding: 2rem;
+  padding-right: calc(320px + 2rem);
+  /* Account for chat sidebar width */
 }
 
 .app-header {
